--- a/portifolio/styles.css
+++ b/portifolio/styles.css
@@ -6,6 +6,14 @@
     --corQuatro: #4B7568;
 }
 
+body {
+    background-color: var(--corBack);
+    opacity: 1;
+    background-image:  linear-gradient(30deg, #080b08 12%, transparent 12.5%, transparent 87%, #080b08 87.5%, #080b08), linear-gradient(150deg, #080b08 12%, transparent 12.5%, transparent 87%, #080b08 87.5%, #080b08), linear-gradient(30deg, #080b08 12%, transparent 12.5%, transparent 87%, #080b08 87.5%, #080b08), linear-gradient(150deg, #080b08 12%, transparent 12.5%, transparent 87%, #080b08 87.5%, #080b08), linear-gradient(60deg, #080b0877 25%, transparent 25.5%, transparent 75%, #080b0877 75%, #080b0877), linear-gradient(60deg, #080b0877 25%, transparent 25.5%, transparent 75%, #080b0877 75%, #080b0877);
+    background-size: 80px 140px;
+    background-position: 0 0, 0 0, 40px 70px, 40px 70px, 0 0, 40px 70px;
+}
+
 @media screen and (min-width: 1430px) {
 
 * {
@@ -17,10 +25,6 @@ header {
     z-index: 99999999999;
     position: sticky;
     top: 15px;
-}
-
-body {
-    background-color: var(--corBack);
 }
 
 .menu {
