--- a/portifolio/styles.css
+++ b/portifolio/styles.css
@@ -1,6 +1,6 @@
 :root {
     --corFundo: #081A0F;
-    --corBack: #090e09;
+    --corBack: #050a05;
     --corDois: #437069;
     --corTres: #1A1F1D;
     --corQuatro: #4B7568;
@@ -9,9 +9,8 @@
 body {
     background-color: var(--corBack);
     opacity: 1;
-    background-image:  linear-gradient(30deg, #080b08 12%, transparent 12.5%, transparent 87%, #080b08 87.5%, #080b08), linear-gradient(150deg, #080b08 12%, transparent 12.5%, transparent 87%, #080b08 87.5%, #080b08), linear-gradient(30deg, #080b08 12%, transparent 12.5%, transparent 87%, #080b08 87.5%, #080b08), linear-gradient(150deg, #080b08 12%, transparent 12.5%, transparent 87%, #080b08 87.5%, #080b08), linear-gradient(60deg, #080b0877 25%, transparent 25.5%, transparent 75%, #080b0877 75%, #080b0877), linear-gradient(60deg, #080b0877 25%, transparent 25.5%, transparent 75%, #080b0877 75%, #080b0877);
-    background-size: 80px 140px;
-    background-position: 0 0, 0 0, 40px 70px, 40px 70px, 0 0, 40px 70px;
+    background-image:  linear-gradient(#0a0e0b 2.9000000000000004px, transparent 2.9000000000000004px), linear-gradient(to right, #0a0e0b 2.9000000000000004px, #050a05 2.9000000000000004px);
+    background-size: 58px 58px;
 }
 
 @media screen and (min-width: 1430px) {
@@ -39,7 +38,7 @@ header {
 
     .menu-info {
         margin-top: 15px;
-        border: solid 1px #ffffff11;
+        border: outset 1px #2423231e;
         border-radius: 30px;
 
         padding: 0 15px;
@@ -1047,7 +1046,7 @@ header {
 
     .menu-info {
         margin-top: 15px;
-        border: solid 1px #ffffff11;
+        border: outset 1px #2423231e;
         border-radius: 30px;
 
         padding: 0 15px;
@@ -2061,7 +2060,7 @@ header {
 
     .menu-info {
         margin-top: 15px;
-        border: solid 1px #ffffff11;
+        border: outset 1px #2423231e;
         border-radius: 30px;
 
         padding: 0 15px;
