--- a/portifolio/styles.css
+++ b/portifolio/styles.css
@@ -4,6 +4,8 @@
     --corDois: #437069;
     --corTres: #1A1F1D;
     --corQuatro: #4B7568;
+    --corbtn: #4370692d;
+    --corbtnhover: #4370695e;
 }
 
 body {
@@ -12,6 +14,8 @@ body {
     background-image:  linear-gradient(#0a0e0b 2.9000000000000004px, transparent 2.9000000000000004px), linear-gradient(to right, #0a0e0b 2.9000000000000004px, #050a05 2.9000000000000004px);
     background-size: 58px 58px;
 }
+
+@media screen and (min-width: 1430px) {
 
 .menu {
     width: 75%;
@@ -70,11 +74,11 @@ body {
 
             .contact {
                 margin-left: 20px;
-                background-color: #4370692d;
+                background-color: var(--corbtn);
                 backdrop-filter: blur(30px);
                 border-radius: 25px;
                 border: 1px inset rgba(255, 255, 255, 0.164);
-                transition: 0.3s ease-in;
+                transition: 0.5s ease-in;
 
                 li {
                     padding: 10px;
@@ -87,7 +91,7 @@ body {
             }
 
             .contact:hover {
-                background-color: #4370695e;
+                background-color: var(--corbtnhover);
                 backdrop-filter: blur(68px);
                 border: 1px outset rgba(255, 255, 255, 0.164);
             }
@@ -97,8 +101,6 @@ body {
     }
 
 }
-
-@media screen and (min-width: 1430px) {
 
 * {
     margin: 0;
@@ -152,9 +154,9 @@ header {
             button {
                 width: 45px;
                 height: 45px;
-                background-color:  #c5c4c410 ;
+                background-color:  #c5c4c410;
                 backdrop-filter: blur(68px);
-                border: 0.5px solid #c5c4c410;
+                border: 0.5px solid #221f1f27;
                 border-radius: 12px;
 
                 a, 
@@ -177,13 +179,13 @@ header {
                 height: 45px;
                 background-color: #c5c4c410 ;
                 backdrop-filter: blur(68px);
-                border: 0.5px solid #c5c4c410;
+                border: 0.5px solid #221f1f27;
                 border-radius: 12px;
                 padding: 0 10px;
 
                 a, 
                 i{
-                    font-size: 27px;
+                    font-size: 20px;
                     color: var(--corQuatro);
                     text-decoration: none;
                     font-family: "Hubot Sans", sans-serif;
@@ -191,7 +193,6 @@ header {
                 a {
                     color: white;
                     letter-spacing: 1px;
-                    font-weight: 450;
                 }
             }
 
@@ -1022,6 +1023,91 @@ hr{
 
 body {
   background-color: var(--corBack);
+}
+
+.menu {
+    width: 75%;
+    background: #a7a5a517;
+    backdrop-filter: blur(20px);
+    margin: auto;
+    border-radius: 30px;
+    max-width: 2500px;
+
+    z-index: 9999999;
+
+    .menu-info {
+        margin-top: 15px;
+        border: outset 1px #2423231e;
+        border-radius: 30px;
+
+        padding: 0 15px;
+        display: flex;
+        justify-content: space-between;
+
+        .logo{
+            user-select: none;      
+            pointer-events: none;
+        }
+
+        .navbar {
+            display: flex;
+            align-items: center;
+            font-family: "Hubot Sans", sans-serif;
+            font-weight: 300;
+
+            ul {
+                display: flex;
+                
+            }
+
+            li {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                list-style: none;
+                padding-left: 20px;
+            }
+
+            a {
+                text-decoration: none;
+                color: rgb(255, 255, 255);
+                text-shadow: 1px 1px 10px #090e0998;
+            }
+
+            a:hover {
+                color: var(--corDois);
+                transition: all 1s ease;
+                font-weight: 400;
+            }
+
+            .contact {
+                margin-left: 20px;
+                background-color: var(--corbtn);
+                backdrop-filter: blur(30px);
+                border-radius: 25px;
+                border: 1px inset rgba(255, 255, 255, 0.164);
+                transition: 0.5s ease-in;
+
+                li {
+                    padding: 10px;
+                }
+
+                a {
+                    color: #ffffff;
+                    transition: 0.3s ease-in;
+                }
+            }
+
+            .contact:hover {
+                background-color: var(--corbtnhover);
+                backdrop-filter: blur(68px);
+                border: 1px outset rgba(255, 255, 255, 0.164);
+            }
+
+
+        }
+    }
+
 }
 
 header {
@@ -1955,6 +2041,91 @@ header {
     z-index: 9999999;
     position: sticky;
     top: 15px;
+}
+
+.menu {
+    width: 75%;
+    background: #a7a5a517;
+    backdrop-filter: blur(20px);
+    margin: auto;
+    border-radius: 30px;
+    max-width: 2500px;
+
+    z-index: 9999999;
+
+    .menu-info {
+        margin-top: 15px;
+        border: outset 1px #2423231e;
+        border-radius: 30px;
+
+        padding: 0 15px;
+        display: flex;
+        justify-content: space-between;
+
+        .logo{
+            user-select: none;      
+            pointer-events: none;
+        }
+
+        .navbar {
+            display: flex;
+            align-items: center;
+            font-family: "Hubot Sans", sans-serif;
+            font-weight: 300;
+
+            ul {
+                display: flex;
+                
+            }
+
+            li {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                list-style: none;
+                padding-left: 20px;
+            }
+
+            a {
+                text-decoration: none;
+                color: rgb(255, 255, 255);
+                text-shadow: 1px 1px 10px #090e0998;
+            }
+
+            a:hover {
+                color: var(--corDois);
+                transition: all 1s ease;
+                font-weight: 400;
+            }
+
+            .contact {
+                margin-left: 20px;
+                background-color: var(--corbtn);
+                backdrop-filter: blur(30px);
+                border-radius: 25px;
+                border: 1px inset rgba(255, 255, 255, 0.164);
+                transition: 0.5s ease-in;
+
+                li {
+                    padding: 10px;
+                }
+
+                a {
+                    color: #ffffff;
+                    transition: 0.3s ease-in;
+                }
+            }
+
+            .contact:hover {
+                background-color: var(--corbtnhover);
+                backdrop-filter: blur(68px);
+                border: 1px outset rgba(255, 255, 255, 0.164);
+            }
+
+
+        }
+    }
+
 }
 
 .container-principio {
